--- a/css/recomendacoes.css
+++ b/css/recomendacoes.css
@@ -39,7 +39,7 @@
     border-radius: 1rem;
     margin: 1rem;
     padding: 0.5rem;
-    color:rgb(255, 255, 255);
+    color:#f1f1f0;
     background-color:#3D3D5E;
     width: 50%;
 }
