--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,6 @@ main{
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    font-size: 1rem;
 }
 
 
@@ -32,9 +31,10 @@ h1{
     font-family: 'Gilda Display', serif;
     align-items: center;
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     margin:0.5rem;
     padding: 0.5rem;
+    font-weight: bold;
 
 }
 
@@ -53,7 +53,7 @@ h2{
     display: flex;
     margin:0.5em;
     padding: 0.5rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-family: 'Gilda Display', serif;
     
 }
@@ -63,7 +63,7 @@ h2{
     margin: 1rem;
     padding: 0.5rem;
     background-color:#c4c4a1;
-    color:rgb(0, 0, 0);
+    color:#11111e;
     width: 50%;
 }
 
@@ -81,6 +81,7 @@ h2{
 
 a{
     margin: 1.5rem;
+    font-size: 1.1rem;
     text-decoration: none;
 }
 
@@ -106,3 +107,6 @@ a{
     size: 10rem;
 }
 
+p{
+    font-size: 1rem;
+}
