--- a/css/procura.css
+++ b/css/procura.css
@@ -8,7 +8,7 @@
 }
 .menu-burguer{
     width:5%;
-    height:70%;
+    height:auto;
 }
 
 nav {
@@ -18,7 +18,7 @@ nav {
 }
 
 .lupa{
-    width:3%;
+    width:5%;
     height:auto;
 }
 
@@ -27,13 +27,13 @@ nav {
     height: auto;
     width: 10rem;
     display: flex;
+    background-color:#f1f1f0;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
     padding:0.5rem;
     margin: 1rem;
-    background-color:#f1f1f0;
 
 }
 .projetos_busca{
@@ -44,16 +44,59 @@ nav {
 }
 .projetinho{
     width:100%;
-    height:4rem;
+    height:6rem;
 }
 .check-filtro{
     display: flex;
     flex-direction:row;
     
 }
-.info_doacoes{
+
+footer{
+    height: fit-content;
+    padding: 0.5rem;
+    border-top:0.15rem solid #3D3D5E;
+}
+
+a{
+    text-decoration: none;
+}
+
+.teste{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
+}
+.doacao{
+    display: block;
+    border: 0.15rem solid #3D3D5E;
+    background-color:#f1f1f0;
+    justify-content: stretch;
+    text-align: start;
+
+    padding:0.5rem;
+    width: 10rem;
+    height: 7rem;
+    margin: 0.5rem;
+}
+
+p{
+    padding: 0.5rem;
+}
+a{
+    margin: 0rem;
+}
+
+
+.botao{
+    margin: 1.5rem;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+.botao-atual{
+    margin: 1.5rem;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+.distancia{
+    margin-left: 7rem;
 }
